Test/good/bitrep/bit_indexed.tt
import Data.Nat

object Bit' : Nat -> Type where
  O' : Bit' 0
  I' : Bit' 1
