Test/bad/staging/bit_rep_dependent_on_stage1_bundled.tt
import Data.Nat
import Data.Vect

data Bit : Type where
  O : Bit
  I : Bit

bitToNat : Bit -> Nat
bitToNat O = 0
bitToNat I = 1

f : (b : Bit) -> Vect (bitToNat b) Bit
f O = []
f I = [O]

badCircuit : < (b : Bit) -> Vect (bitToNat b) Bit >
badCircuit = [| \b => f b |]
